<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <EditText
                    android:id="@+id/edit_url"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:hint="@string/url_hint"
                    android:autofillHints="name"
                    android:inputType="textUri"
                    android:maxWidth="100dp" />

                <Button
                    android:id="@+id/fetch_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_fetch"/>
            </LinearLayout>

            <TableLayout
                android:id="@+id/img_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/download_bar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:progress="0"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/progress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/progress_text"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:gravity="center"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/game_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_game"/>
            <TextView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:id="@+id/options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/options"
                android:textSize="16sp"
                android:background="@color/white"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:id="@+id/default_game_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_default_game"/>
                <Button
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:id="@+id/double_game_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_double_game"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>