<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="24dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/matches"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/matches_text"
                android:textStyle="bold"
                android:textSize="32sp"
                android:gravity="center"
                />
            <!--Replace it with a timer!-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/timer"
                android:textStyle="bold"
                android:textSize="32sp"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/attempts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/attempts"
                android:textStyle="bold"
                android:textSize="32sp"
                android:gravity="center"
                />
            <!--Replace it with a timer!-->
            <TextView
                android:id="@+id/timer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/init_time"
                android:textStyle="bold"
                android:textSize="32sp"
                android:gravity="center"
                />
        </LinearLayout>
        <TableLayout
            android:layout_marginTop="16dp"
            android:id="@+id/game_img_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_restart"/>
        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/pauseView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center"
        android:visibility="visible"
        android:orientation="vertical">
        <TextView
            android:id="@+id/turn"
            android:text="Player 1's Turn"
            android:layout_marginBottom="24dp"
            android:layout_height="50dp"
            android:layout_width="200dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/btn_pressed"/>
        <Button
            android:id="@+id/resumeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_marginBottom="24dp"/>
        <LinearLayout
            android:id="@+id/scoreTable"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_pressed">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2">
                <TextView
                    android:text="Player 1"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <TextView
                    android:text="Player 2"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="3">
                <TextView
                    android:text="Time Used "
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <TextView
                    android:text="Attempts"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <TextView
                    android:text="Time Used"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <TextView
                    android:text="Attempts"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="3">
                <TextView
                    android:id="@+id/time_1"
                    android:text="0"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/attempts_1"
                    android:text="0"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/time_2"
                    android:text="0"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/attempts_2"
                    android:text="0"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>